--- a/src/App.css
+++ b/src/App.css
@@ -14,18 +14,83 @@
 }
 
 .App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+  background-color: white;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
-  color: white;
+  color: rgb(5, 95, 9);
+  position: relative;
+  top: 100px;
 }
 
 .App-link {
   color: #61dafb;
+}
+
+.topnav {
+  background-color: rgb(5, 95, 9);
+  overflow: hidden;
+  width: 100%;
+  position: fixed;
+  top: 0px;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
+    sans-serif;
+}
+
+.topnav a {
+  float: left;
+  color: #f2f2f2;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+  font-size: 17px;
+}
+
+.topnav a:hover {
+  background-color: rgb(80, 138, 80);
+  color: black;
+}
+
+.topnav a.active {
+  background-color: rgb(80, 138, 80);
+  color: white;
+}
+
+#dinnerdash {
+  margin: 80px;
+}
+
+.postcodeForm {
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
+    sans-serif;
+}
+
+#postcode {
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
+    sans-serif;
+  text-align: center;
+  width: 500px;
+  padding: 20px;
+  margin: 20px;
+  border-radius: 30px;
+  box-shadow: 0 0 15px 4px rgba(0, 0, 0, 0.06);
+}
+
+#postcodeButton {
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
+    sans-serif;
+  text-align: center;
+  background-color: rgb(80, 138, 80);
+  color: white;
+  padding: 12px;
+  border-radius: 20px;
+  border: white;
 }
 
 @keyframes App-logo-spin {
