--- a/src/App.css
+++ b/src/App.css
@@ -99,26 +99,38 @@
 }
 
 .menu-img {
-  width: 10em;
+  width: 30%;
   height: 10em;
   object-fit: cover;
 }
 
 .menu-list {
+  /* float: left;
+  width: 33.33%; 
+  padding: 100px; */
+  margin-top: 150px;
+}
+
+.column {
   float: left;
-  width: 33.33%;
+  width: 50%;
   padding: 5px;
+}
+
+.row::after {
+  content: "";
+  clear: both;
+  display: table;
 }
 
 #list {
   list-style: none;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+* {
+  box-sizing: border-box;
+}
+
+#quantity {
+  color: rgb(5, 95, 9);
 }
