--- a/src/App.css
+++ b/src/App.css
@@ -87,11 +87,33 @@
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
   text-align: center;
-  background-color: rgb(80, 138, 80);
+  background-color: rgb(5, 95, 9);
   color: white;
   padding: 12px;
   border-radius: 20px;
   border: white;
+}
+
+#postcodeButton:hover {
+  background-color: rgb(80, 138, 80);
+  color: black;
+}
+
+#addButton {
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
+    sans-serif;
+  text-align: center;
+  background-color: rgb(5, 95, 9);
+  color: white;
+  padding: 12px;
+  border-radius: 20px;
+  border: white;
+}
+
+#addButton:hover {
+  background-color: rgb(80, 138, 80);
+  color: black;
 }
 
 #search {
@@ -109,6 +131,14 @@
   width: 33.33%; 
   padding: 100px; */
   margin-top: 150px;
+}
+
+.listItem {
+  margin: 50px;
+}
+
+#menuItemName {
+  color: rgb(5, 95, 9);
 }
 
 .column {
