--- a/src/App.css
+++ b/src/App.css
@@ -121,7 +121,7 @@
 }
 
 .menu-img {
-  width: 30%;
+  width: 50%;
   height: 10em;
   object-fit: cover;
 }
@@ -143,8 +143,8 @@
 
 .column {
   float: left;
-  width: 50%;
-  padding: 5px;
+  width: 25%;
+  padding: 20px;
 }
 
 .row::after {
@@ -163,4 +163,14 @@
 
 #quantity {
   color: rgb(5, 95, 9);
+}
+
+.specialOffer {
+  margin-top: -120px;
+}
+
+#whynottry {
+  background-color: rgb(5, 95, 9);
+  color: white;
+  padding: 20px;
 }
